--- a/style.css
+++ b/style.css
@@ -2,12 +2,12 @@
     margin:0;
     padding:0;
     box-sizing:border-box;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 body{
-    overflow: hidden;
+    /* overflow: hidden;
     overflow-x:hidden;
-    overflow-y:hidden;
+    overflow-y:hidden; */
 }
 .setion-1 > img{
     align-items: center;
@@ -33,6 +33,6 @@ button{
     margin-left:auto;
     margin-right:auto;
     width:80%;
-    margin-top:40%;
+    margin-top:40px;
     border:2px red   
 }
